BUG-003: Header overlaps content when scrolling

--- a/src/widgets/Header/Header.module.css
+++ b/src/widgets/Header/Header.module.css
@@ -10,7 +10,7 @@
 
   position: sticky;
   top: 0;
-  z-index: 20;
+  z-index: 100;
 }
 
 .headerNoShadow {
